Fix z-index issue with expanded details of projects on mobile

--- a/style/index.scss
+++ b/style/index.scss
@@ -329,6 +329,7 @@ body {
     opacity: 0;
     transition: 0.5s;
     -webkit-transition: 0.5s;
+    z-index: 6;
   }
 
   .next-arrow {
@@ -341,6 +342,7 @@ body {
     opacity: 0;
     transition: 0.5s;
     -webkit-transition: 0.5s;
+    z-index: 6;
   }
 
   .img-container:hover .next-arrow,
@@ -2644,8 +2646,8 @@ body {
         font-size: 60px;
         width: fit-content;
         opacity: 0;
-        transform: translate(-100%, 0);
-        -webkit-transform: translate(-100%, 0);
+        transform: translate(-300%, 0);
+        -webkit-transform: translate(-300%, 0);
 
         transition-property: transform, opacity;
         transition-duration: 0.5s, 0.5s;
@@ -2669,12 +2671,12 @@ body {
           opacity: 1;
           transform: translate(0%, 0%);
           transition-property: transform, opacity;
-          transition-duration: 0.5s, 0.5s;
+          transition-duration: 1s, 1s;
           transition-timing-function: ease-in-out;
 
           -webkit-transform: translate(0%, 0%);
           -webkit-transition-property: transform, opacity;
-          -webkit-transition-duration: 0.5s, 0.5s;
+          -webkit-transition-duration: 1s, 1s;
           -webkit-transition-timing-function: ease-in-out;
         }
       }
